--- a/.github/workflows/bytebase-review-sql.yml
+++ b/.github/workflows/bytebase-review-sql.yml
@@ -1,10 +1,9 @@
 on:
-  push:
+  pull_request:
     branches:
       - main
-
 jobs:
-  bytebase-create-issue:
+  bytebase-review-sql:
     runs-on: ubuntu-latest
     env:
       BYTEBASE_URL: "https://56c6-103-170-72-209.ngrok-free.app"
@@ -12,7 +11,7 @@ jobs:
       BYTEBASE_SERVICE_ACCOUNT: "ci@service.bytebase.com"
       BYTEBASE_TARGETS: "instances/prod-sample-instance/databases/db1,instances/prod-sample-instance/databases/db2"
       FILE_PATTERN: "db/migration_sql/*.sql"
-    name: Create issue
+    name: Review SQL
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -23,8 +22,8 @@ jobs:
           bytebase-url: ${{ env.BYTEBASE_URL }}
           service-key: ${{ env.BYTEBASE_SERVICE_ACCOUNT }}
           service-secret: ${{ secrets.BYTEBASE_PASSWORD }}
-      - name: Create release
-        id: create_release
+      - name: sql review
+        id: sql_review
         uses: bytebase/create-release-action@v1
         with:
           url: ${{ env.BYTEBASE_URL }}
@@ -34,24 +33,4 @@ jobs:
           # fail the action if release checks report any error.
           check-release: "FAIL_ON_ERROR"
           targets: ${{ env.BYTEBASE_TARGETS }}
-          validate-only: false
-      - name: Create plan
-        id: create_plan
-        uses: bytebase/create-plan-from-release-action@v1
-        with:
-          url: ${{ env.BYTEBASE_URL }}
-          token: ${{ steps.login.outputs.token }}
-          project: ${{ env.BYTEBASE_PROJECT }}
-          release: ${{ steps.create_release.outputs.release }}
-          targets: ${{ env.BYTEBASE_TARGETS }}
-          # fail the action if plan checks report any error.
-          check-plan: "FAIL_ON_ERROR"
-      - name: Create rollout
-        id: create_rollout
-        uses: bytebase/rollout-action@v1
-        with:
-          url: ${{ env.BYTEBASE_URL }}
-          token: ${{ steps.login.outputs.token }}
-          plan: ${{ steps.create_plan.outputs.plan }}
-          # set target-stage to exit after the stage completes
-          # target-stage: 'Test Stage'
+          validate-only: true
