--- a/.github/workflows/bytebase-roll-out-sql.yml
+++ b/.github/workflows/bytebase-roll-out-sql.yml
@@ -6,7 +6,7 @@ on:
       - "db/migrate/*.sql"
 
 jobs:
-  bytebase-create-issue:
+  bytebase-roll-out-sql:
     runs-on: ubuntu-latest
     env:
       BYTEBASE_URL: ${{ vars.BYTEBASE_URL }}
@@ -14,7 +14,7 @@ jobs:
       BYTEBASE_SERVICE_ACCOUNT: "ci@service.bytebase.com"
       BYTEBASE_TARGETS: "instances/prod-sample-instance/databases/db1,instances/prod-sample-instance/databases/db2"
       FILE_PATTERN: "db/migrate/*.sql"
-    name: Create issue
+    name: Roll out
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -48,8 +48,8 @@ jobs:
           targets: ${{ env.BYTEBASE_TARGETS }}
           # fail the action if plan checks report any error.
           check-plan: "FAIL_ON_ERROR"
-      - name: Create rollout
-        id: create_rollout
+      - name: Roll out plan
+        id: roll_out_plan
         uses: bytebase/rollout-action@v1
         with:
           url: ${{ env.BYTEBASE_URL }}
